# ZooSVD

./: .gitignore  CMakeLists.txt  README.md
PyZooSVD/: CUDA.py  Eigen.py  KSVD.py  LAPACK.py  __init__.py  utils.py
example/: npy_2048.py
src/: CUDA_gesvdj_wrap.cpp  Eigen_wrap.cpp  KSVD_main.cpp  KSVD_wrap.cpp  LAPACK_wrap.cpp  utils.cpp
tests/: conftest.py  ksvd.py  mat_py_to_c.py  test_cuda.py  test_eigen.py  test_lapack.py
